# lora_lab

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.js
python/: lora_tool.py
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs
